--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap");
+
 :root {
   --primary-clr: #ffe01b;
   --primary-clr: hsl(215, 26%, 13%);
@@ -83,7 +85,7 @@ h5 {
 
 h1 {
   font-size: var(--font-01);
-  font-weight: 700;
+  // font-weight: 500;
 }
 
 h2 {
