--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,9 @@
 .App {
+  background: url("https://emeken-portfolio.s3.us-west-2.amazonaws.com/web/_W4A2567+(1).jpeg");
   display: flex;
   text-align: center;
   width: 100vw;
   height: 100vh;
-  background: url("https://emeken-portfolio.s3.us-west-2.amazonaws.com/web/_W4A2567.JPG");
   background-color: var(--primary-clr);
   background-size: cover;
   background-position: center;
